# mpi_2d_thermal_conductivity

./: .gitignore  CMakeLists.txt  conf.txt  conf_attributes.cpp  conf_attributes.h  generate_data.py  heat_map.txt  main.cpp  multiarray.h
images/: a.pl  make_gif.py
